# serial-plotter

./: .gitignore  README.md  connection.md  mise.toml  ntcTest.ino  payload.md  plotter.py  pyproject.toml  requirements.txt  task.md  thermal_analyser.py  thermal_plotter.py
.github/workflows/: desktop-ci.yml  desktop-release.yml
apps/desktop/: ARCHITECTURE.md  example_data.csv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.js
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/docs/: PLANTS_COMMANDS.md
apps/desktop/src-tauri/runtime/python/: runner.py  test_runner_contract.py
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs  plants.rs  plugins.rs
apps/desktop/src-tauri/src/core/: error.rs  mod.rs
apps/desktop/src-tauri/src/state/: app_state.rs  mod.rs  (+2 more)
apps/desktop/src/routes/: +page.svelte  layout.css
comtroller_framework/: setup.py
comtroller_framework/controller_framework/: __init__.py
comtroller_framework/controller_framework/core/: __init__.py  app.py  mcu_driver.py
comtroller_framework/controller_framework/gui/: analyzer_gui.py  plotter_gui.py
controller_framework/: setup.py
controller_framework/controller_framework/core/: __init__.py  app.py  controller.py  ipcmanager.py  mcu_driver.py
controller_framework/controller_framework/gui/: __init__.py  analyzer_gui.py  main_gui.py  plotter_gui.py
controller_framework/core/: app.py  controller.py  ipcmanager.py  logmanager.py  mcu_driver.py
controller_framework/examples/: main.py  tclab_thermal.py
controller_framework/gui/: analyzer_gui.py  main_gui.py  plotter_gui.py  utils_gui.py
controller_framework/tests/core/unit/: test_class_app.py
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs
docs/en/: core-concepts.md  drivers-and-controllers.md  getting-started.md  index.md  plants.md  plugin-file-format.md  runtime-behavior.md  troubleshooting.md
docs/pt-BR/: core-concepts.md  drivers-and-controllers.md  getting-started.md  index.md  plants.md  plugin-file-format.md  runtime-behavior.md  troubleshooting.md
examples/: ball_n_plate.py  main.py  rdata.py  tclab_thermal.py  thermal_plant.py  virtual.py
src/gui/: __init__.py  main_gui.py  nav_bar.py  teste.py  utils_gui.py
src/gui/content/: default-driver-content.py
src/gui/stylesheet/: custom-dialog.qss  main-gui.qss  nav-bar.qss
temp_logs/: log_2024-11-11-17-15-5.csv  log_2024-11-4-18-10-29.csv  log_simulacao.csv  log_simulacao_perturbacao.csv  open_loop_30p.csv
thermal_actuator/: NTC_sim.py  luts.txt  thermal_actuator.ino  upgraded_tclab.ino  upgraded_tclab_commander.py
thermal_actuator/upgraded_tclab/: upgraded_tclab.ino
thermal_controller/: thermal_analyser.py  thermal_controller.ino  thermal_plotter.py
(+98 files in other folders)
