[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splot-app"
version = "0.0.1"
description = "A app to simplify creation of controllers"
authors = [
    { name = "Paulo Santos", email = "pauloxrms@gmail.com" },
    { name = "Higor Lima", email = "limahigor.g@gmail.com" },
    { name = "Rita Lemos", email = "rklp@ic.ufal.br" },
    { name = "Vinicius Rafael", email = "vinicius.rafael751@gmail.com" },
]
license = { text = "GNU" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "PySide6>=6.8.2",
]

[tool.setuptools]
py-modules = ["controller_framework"]
